# easyjson

./: Makefile  pyproject.toml
easyjson/: __init__.py
tests/: fixtures.py  test_dumps_argparse.py  test_dumps_bytes.py  test_dumps_dataclass.py  test_dumps_date.py  test_dumps_datetime.py  test_dumps_ipaddress.py  test_dumps_set_frozenset.py  test_dumps_timedelta.py  test_dumps_uuid.py  test_json_stdlib_failures.py  test_json_stdlib_successes.py
